--- a/cv.tex
+++ b/cv.tex
@@ -12,7 +12,7 @@
 \documentclass[letterpaper,11pt]{article}
 
 \usepackage{hyperref}
-\usepackage{geometry}
+\usepackage[margin=1.2in]{geometry}
 \usepackage{amsmath}
 
 % Comment the following lines to use the default Computer Modern font
