social networking profiles

--- a/cv.tex
+++ b/cv.tex
@@ -79,8 +79,13 @@
 
 	1612 Parker St. Apt D $\bullet$
 	Berkeley, CA 94703 $\bullet$
-	608.658.4316 $\bullet$
-	\href{mailto:me@mattterry.net}{me@mattterry.net}
+
+	\href{mailto:me@mattterry.net}{me@mattterry.net}  $\bullet$
+	608.658.4316
+
+	\hyperref[https://github.com/mrterry]{GitHub}  $\bullet$
+	\hyperref[http://www.linkedin.com/pub/matt-terry/a/758/61b/]{LinkedIn} $\bullet$
+	\hyperref[http://careers.stackoverflow.com/cv/edit/178262]{StackOverflow}
 \end{center}
 
 \section*{Objective}
