--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@ hold a Department of Energy ``Q'' clearance.
 \sectionline
 \begin{itemize}
 	\item
-		\textbf{Lawrence Livermore National Laboratory} Post-docoral research, 2010-present \\
+		\textbf{Lawrence Livermore National Laboratory} Post-doctoral research, 2010-present \\
 		Inertial Fusion and High Energy Density Physics Target Design
 	\item 
 		\textbf{University of Wisconsin-Madison} Ph.D. Nuclear Engineering, 2010 \\
@@ -117,8 +117,8 @@ I am by temperament an engineer, by training a physicist, and by practice a
 software developer.  For the last 9 years, my research has focused on using
 practical
 computational methods to model and understand the behavior of high energy
-density plasmas, that is, ionized matter with pressure greater than $>10^6$ time atmospheric
-pressure and temperatures exceeding $10^4$K.  I have studied in detail, shock hydrodynamics,
+density plasmas, that is, ionized matter with pressure greater than $10^6$ times atmospheric
+pressure and temperatures exceeding $10^4$ K.  I have studied in detail, shock hydrodynamics,
 fusion burn kinetics, and inertial fusion design.
 
 Intrinsic to my scientific research is the development of software.  Among my
