--- a/cv.tex
+++ b/cv.tex
@@ -109,8 +109,6 @@ hold a Department of Energy ``Q'' clearance.
 		\textbf{Georgia Institute of Technology} B.S. Nuclear and Radiological Engineering, 2004
 \end{itemize}
 
-
-
 \section*{Computational Physicist Engineer}
 \sectionline
 I am by temperament an engineer, by training a physicist, and by practice a
@@ -125,7 +123,9 @@ Intrinsic to my scientific research is the development of software.  Among my
 software projects I have:
 \begin{enumerate}
 	\item Developed Monte Carlo charged particle transport packages for two
-		radiation hydrodynamics codes ``Bucky'' and ``Draco''.  These were
+		radiation hydrodynamics codes ``Bucky'' (University of
+		Wisconsin-Madison) and ``Draco'' (University of Rochester, Laboratory
+		for Laser Energetics).  These were
 		developed to study the physics of fusion burn kinetics in high density
 		plasmas.
 	\item Developed a platform to automate the design of certain aspect of an
@@ -153,14 +153,17 @@ when appropriate.  I have extensive experience developing convenient Python
 interfaces to high performance, compiled libraries using tools such as Cython,
 f2py, and SWIG.
 
-Among my Python projects I have:
+Among my Python projects I:
 \begin{enumerate}
-	\item Developed an analysis library for pre-processing, post-processing,
-		and embedded steering of the radiation-hydrodynamics program HYDRA.
-	\item Currently developing a program ``Yoink'' to reverse-engineering data
-		from scientific figures.
+	\item Develop and maintain an analysis library (``Honcho'') for pre-processing, post-processing,
+		and embedded steering of the radiation-hydrodynamics program HYDRA\@.
+		Honcho regularly processes 100s of GB in a single interactive session.
+	\item Develop ``\hyperref[https://github.com/mrterry/yoink]{Yoink}'', a tool to reverse engineer scientific data from
+		rasterized images.  Besides interpolating points from line plots, it
+		can invert colormapped images to return the original scalar field.
+		Yoink is developed on top of Matplotlib and is platform independent.
 	\item Converted a rigid legacy Fortran program to a script-able
-		Python-based program without significant loss of performance.
+		Python-based program without loss of performance.
 \end{enumerate}
 
 In addition to Python, I have worked with C, C++, Fortran (legacy Fortran 77
@@ -173,13 +176,15 @@ home with the command-line.
 I am an advocate for computing competency in the sciences.  While in graduate
 school, I helped found The Hacker Within, a peer learning group for scientific
 computing and open source tools.  Additionally, I teach scientists software
-development skills as an instructor with  Software Carpentry.
+development skills as an instructor with
+\hyperref[http://software-carpentry.org/]{Software Carpentry}.
 
-I am an active member of the Python scientific computing community.   As a
-member of the program committee, I helped set the program for the Scientific
-Computing in Python conference.  I am a member of the UC-Berkely py4science
-community and a member of NumFocus, a Python oriented scientific
-computing advocacy organization.
+I am an active participant of the Python scientific computing community
+(SciPy, Matplotlib, Scikit-Image).   As a
+recurring member of the Scientific Computing in Python program committee, I help set the technical program for the 2012 and 2013 conference.  I am a member of the UC-Berkely py4science
+community and a member of the \hyperref[numfocus.org]{NumFocus Foundation}, a non-profit which promotes the use of
+accessible and reproducible computing in science and technology and is affiliated with the Python
+scientific computing ecosystem.
 
 
 %\section*{Other}
